<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Read RSS Feed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">HelloWorld</string>
    <string name="openlink">Open Link</string>
    <string name="link">Link</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="stop_service">Stop Service</string>
    <string name="publishDate">Published Date</string>
    <string name="add_filter">Add Filter</string>
    <string name="show_all">Show All</string>
    <string name="show_filtered">Show Filtered</string>
    <string name="show_excluded">Show Excluded</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_feed_title">New Feed</string>
    <string name="dialog_filter_title">New Filter</string>
    <string name="dialog_filter_name">Filter Name</string>
    <string name="dialog_filter_value">Filter Text</string>
    <string name="dialog_filter_value_tip">Text to be filtered</string>

    <string name="enter_filter_name">Enter a filter name</string>
    <string name="enter_name">Enter a name</string>
    <string name="enter_summary">Enter a summary</string>
    <string name="enter_url">Enter a url</string>
    <string name="dialog_feed_summary">Summary</string>
    <string name="dialog_feed_url">URL</string>
    <string name="dialog_feed_name">Name</string>

    <string name="summary">Summary</string>
    <string name="text">Text</string>
    <string name="image">Image</string>

    <string name="dialog_update_frequency">Update Frequency</string>
    <string name="dialog_value_frequency">Filter Name</string>
    <string name="enter_freq_value">Enter a frequency value in milliseconds</string>

    <string name="subtitle">Subtitle</string>
    <string name="isInclude">Include Filter</string>
    <string name="isGlobal">Global Filter</string>
    <string name="dev_email_id">care.pstechnology@gmail.com</string>
    <string name="tutorial">Tutorial</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <!--<string name="pref_title_display_name">Display name</string>-->
    <string name="pref_title_cleanup">Clean Up in Days</string>
    <string name="pref_default_cleanup_days">0</string>
    <string name="pref_key_cleanup_days">cleanup_days_new</string>
    <string name="pref_diag_title_cleanup">0 is never, value should be 1-31</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tutorial">Help</string>
    <string name="filterTxt">filter text</string>
    <string name="filterType">Type of Filter</string>
    <string name="deleteAllFilters">Delete all filters</string>
    <string name="setUpdateFrequency">Set Update Frequency</string>
    <string name="title_activity_feed_search">Search Feed Using keyword</string>

    <string name="subscribe_keywords_url">Keywords or Url</string>
    <string name="txt_search">Search</string>
    <string name="search_feed">Search Feeds</string>
    <string name="last_updated_value">Not Available</string>
    <string name="include_global_filter">Include Global Filters</string>
    <string name="lastUpdated">Last Updated : </string>
    <string name="lastUpdatedScan">Last Scanned : </string>
    <string name="clean_feed_msg">Delete All Message</string>
    <string name="clean_feed_filter">Delete All Filters</string>
    <string name="timestamp">Message Time</string>
    <string name="feed_title">Feed Title</string>
    <string name="banner_ad_unit_id">ca-app-pub-4403433540523787/9324543068</string>
    <string name="import_from_file">Import From OMPL</string>
    <string name="export_to_file">Export To OPML</string>

    <string name="send_to">Send To ...</string>
    <string name="emailId">care.pstechnology@gmail.com</string>

    <string name="download_over_wifi">Sync Over WiFi Only</string>
    <string name="pref_title_download_over_wifi">Sync Over WiFi Only</string>
    <string name="pref_description_download_over_wifi">Sync Over WiFi Only, Disable Sync Over Mobile Data</string>
    <string name="show_nofitication">Show Notification</string>
    <string name="pref_description_show_notification">When a Filter is matched the Notification will be displayed</string>
    <string name="pref_title_show_notification">Show Nofication on Matching Feed</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_rationale_read_phone_state">Phone State needed to be known to pause the functioning when the call is coming.</string>
    <string name="permission_rationale_read_contacts">Reading contacts to show them to you</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>
