<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.navigationdrawerexample.MainActivity" >

    <item
        android:id="@+id/addFilter"
        android:orderInCategory="200"
        android:title="@string/add_filter"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/showFiltered"
        android:orderInCategory="200"
        android:title="@string/show_filtered"
        app:showAsAction="never"/>

    <item
        android:id="@+id/showExcluded"
        android:orderInCategory="200"
        android:title="@string/show_excluded"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/showAll"
        android:orderInCategory="200"
        android:title="@string/show_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/cleanFeedMsg"
        android:orderInCategory="200"
        android:title="@string/clean_feed_msg"
        app:showAsAction="never"/>

    <item
        android:id="@+id/cleanFeedFilter"
        android:orderInCategory="200"
        android:title="@string/clean_feed_filter"
        app:showAsAction="never"/>
    

</menu>
