<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/drawer_item_background" android:padding="@dimen/padding_5_5_10_10" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <Space android:id="@+id/space" android:layout_width="@dimen/space_4_4_4_4" android:layout_height="@dimen/space_4_4_4_4" android:layout_centerVertical="true" />

    <ImageView android:id="@+id/image" android:layout_width="@dimen/image_25_25_40_45" android:layout_height="@dimen/image_25_25_40_45"
        android:src="@drawable/rss" android:layout_toRightOf="@id/space"
        android:layout_centerVertical="true" android:contentDescription="@string/image" />

    <TextView android:textSize="@dimen/title" android:textStyle="normal"
        android:textColor="@color/title" android:id="@+id/title"
        android:paddingLeft="@dimen/space_5_5_5_10" android:paddingRight="@dimen/space_5_5_5_10"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:text="@string/title" android:layout_toRightOf="@id/image" />

    <Space android:id="@+id/space1" android:layout_below="@id/title" android:layout_toRightOf="@id/image"
        android:layout_width="fill_parent" android:layout_height="@dimen/space_5_5_5_10" />

        <LinearLayout
            android:id="@+id/updateFeedLayout"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image" android:layout_below="@id/space1"
            android:orientation="horizontal">

        <TextView android:id="@+id/lastUpdatedFeed" android:textSize="@dimen/mini" android:textStyle="normal"
            android:textColor="@color/text"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/lastUpdated" />

        <TextView android:id="@+id/lastUpdatedFeedVal" android:textSize="@dimen/mini" android:textStyle="normal"
            android:layout_gravity="right" android:textColor="@color/summary"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/last_updated_value" />
        </LinearLayout>

    <Space android:id="@+id/space2" android:layout_below="@id/updateFeedLayout" android:layout_toRightOf="@id/image"
        android:layout_width="fill_parent" android:layout_height="@dimen/space_5_5_5_10" />

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image" android:layout_below="@id/space2"
        android:orientation="horizontal">

        <TextView android:id="@+id/lastUpdatedScan" android:textSize="@dimen/mini" android:textStyle="normal"
            android:textColor="@color/text"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/lastUpdatedScan" />

        <TextView android:id="@+id/lastUpdatedScanVal" android:textSize="@dimen/mini" android:textStyle="normal"
            android:layout_gravity="right" android:textColor="@color/summary"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/last_updated_value" />
    </LinearLayout>
</RelativeLayout>