<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/padding_15_15_20_25" android:layout_width="fill_parent" android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_title_background_rounded"
            android:paddingBottom="@dimen/padding_10_10_15_20"
            android:paddingLeft="@dimen/padding_15_15_20_25"
            android:paddingRight="@dimen/padding_15_15_20_25"
            android:paddingTop="@dimen/padding_10_10_15_20"
            android:text="@string/dialog_feed_title"
            android:textColor="@color/title"
            android:textSize="@dimen/window"
            android:textStyle="bold" />

        <RelativeLayout android:background="@drawable/dialog_background_rounded" android:padding="@dimen/padding_15_15_20_25" android:layout_width="fill_parent" android:layout_height="wrap_content">

            <TextView android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/text" android:id="@+id/text1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_feed_name" />
            <Space android:id="@+id/space1" android:layout_width="fill_parent" android:layout_height="@dimen/space_5_5_5_10" android:layout_below="@id/text1" />
            <EditText android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/edittext_text" android:id="@+id/name" android:background="@drawable/edit_text" android:paddingLeft="@dimen/editTextPaddingLeft" android:paddingTop="@dimen/editTextPaddingTop" android:paddingRight="@dimen/editTextPaddingRight" android:paddingBottom="@dimen/editTextPaddingBottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/editTextMinHeight" android:hint="@string/enter_name" android:singleLine="true" android:layout_below="@id/space1" android:inputType="text" />
            <Space android:id="@+id/space2" android:layout_width="fill_parent" android:layout_height="@dimen/space_10_10_10_15" android:layout_below="@id/name" />

            <TextView android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/text" android:id="@+id/text2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_feed_summary" android:layout_below="@id/space2" />
            <Space android:id="@+id/space3" android:layout_width="fill_parent" android:layout_height="@dimen/space_5_5_5_10" android:layout_below="@id/text2" />
            <EditText android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/edittext_text" android:id="@+id/filterText" android:background="@drawable/edit_text" android:paddingLeft="@dimen/editTextPaddingLeft" android:paddingTop="@dimen/editTextPaddingTop" android:paddingRight="@dimen/editTextPaddingRight" android:paddingBottom="@dimen/editTextPaddingBottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/editTextMinHeight" android:hint="@string/enter_summary" android:singleLine="true" android:layout_below="@id/space3" android:inputType="text" />
            <Space android:id="@+id/space4" android:layout_width="fill_parent" android:layout_height="@dimen/space_10_10_10_15" android:layout_below="@id/filterText" />

            <LinearLayout
                android:id="@+id/linLayout"
                android:layout_width="match_parent"
                android:layout_height="13.0sp"
                android:layout_below="@id/space4"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_feed_url"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text"
                    android:textStyle="normal"
                    android:layout_gravity="left"/>

                <ImageButton
                    android:id="@+id/copy_to_clipboard_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_content_copy_white_24dp" />
            </LinearLayout>

            <Space android:id="@+id/space5" android:layout_width="fill_parent" android:layout_height="@dimen/space_5_5_5_10" android:layout_below="@id/linLayout" />
            <EditText android:textSize="@dimen/text" android:textStyle="normal" android:textColor="@color/edittext_text"
                android:id="@+id/url"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/space5"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_url"
                android:inputType="textUri"
                android:minHeight="@dimen/editTextMinHeight"
                android:paddingBottom="@dimen/editTextPaddingBottom"
                android:paddingLeft="@dimen/editTextPaddingLeft"
                android:paddingRight="@dimen/editTextPaddingRight"
                android:paddingTop="@dimen/editTextPaddingTop"
                android:singleLine="true" />
            <Space android:id="@+id/space6" android:layout_width="fill_parent" android:layout_height="@dimen/space_15_15_20_25" android:layout_below="@id/url" />
            <CheckBox
                android:id="@+id/includeGlobalFilterBox" android:layout_below="@id/space6"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:checked="true" android:text="@string/include_global_filter"
                android:paddingBottom="@dimen/editTextPaddingBottom" android:paddingLeft="@dimen/editTextPaddingLeft" android:paddingRight="@dimen/editTextPaddingRight" android:paddingTop="@dimen/editTextPaddingTop"
                android:textColor="@color/edittext_text" />

            <!--<LinearLayout android:orientation="vertical" android:id="@+id/buttonsContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/space6">
                <include layout="@layout/section_buttons_ok_cancel" />
            </LinearLayout>
            <Space android:layout_width="fill_parent" android:layout_height="@dimen/space_10_10_10_15" android:layout_below="@id/buttonsContainer" />-->
        </RelativeLayout>
    </LinearLayout>
</ScrollView>